refactor : DDD + Hexagonal architecture